Src/BootCamp.Chapter/Examples/CompositionVsInheritance/Good/Rocket.cs
using System.Numerics;

namespace BootCamp.Chapter.Examples.CompositionVsInheritance.Good
{
    public class Rocket
    {
        public void Shoot(Vector3 location)
        {
            //.. shooting rocket
        }
    }
}